--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,11 +87,27 @@
         android:layout_gravity="end"
         android:fitsSystemWindows="true"
         >
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/right_user"
-            android:background="@color/black"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:orientation="vertical"
+            android:layout_height="match_parent">
+            <TextView
+                android:background="@color/black"
+                android:gravity="center"
+                android:text="User List"
+                android:textSize="26sp"
+                android:textColor="#ffff00"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/right_user"
+                android:background="@color/black"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="0dp"/>
+        </LinearLayout>
+
     </com.google.android.material.navigation.NavigationView>
 </androidx.drawerlayout.widget.DrawerLayout>
 
