--- a/app/src/main/res/layout/fragment_dailycheck.xml
+++ b/app/src/main/res/layout/fragment_dailycheck.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ERecorder.ErecorderFragment">
+    tools:context=".leftnavi.ERecorder.ErecorderFragment">
 <ProgressBar
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
