--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/nav_1"
-        android:name="com.viatom.checkme.ui.ERecorder.ErecorderFragment"
+        android:name="com.viatom.checkme.leftnavi.ERecorder.ErecorderFragment"
         android:label="Daily Check"
         tools:layout="@layout/fragment_dailycheck" />
 
     <fragment
         android:id="@+id/nav_2"
-        android:name="com.viatom.checkme.ui.DCheck.DcheckFragment"
+        android:name="com.viatom.checkme.leftnavi.DCheck.DcheckFragment"
         android:label="ECG Recorder"
         tools:layout="@layout/fragment_ecg" />
 
     <fragment
         android:id="@+id/nav_3"
-        android:name="com.viatom.checkme.ui.Poximeter.PoximiterFragment"
+        android:name="com.viatom.checkme.leftnavi.Poximeter.PoximiterFragment"
         android:label="Pulse Oximeter"
         tools:layout="@layout/fragment_pulseoximeter" />
 </navigation>
