--- a/app/src/main/res/layout/fragment_ecg.xml
+++ b/app/src/main/res/layout/fragment_ecg.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.DCheck.DcheckFragment">
+    tools:context=".leftnavi.DCheck.DcheckFragment">
 
     <TextView
         android:id="@+id/text_gallery"
