--- a/app/src/main/res/layout/right_drawer.xml
+++ b/app/src/main/res/layout/right_drawer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
         <TextView
             android:background="@color/black"
             android:gravity="center"
