--- a/app/src/main/res/layout/fragment_pulseoximeter.xml
+++ b/app/src/main/res/layout/fragment_pulseoximeter.xml
@@ -7,6 +7,7 @@
    >
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/oxylist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
