--- a/app/src/main/res/layout/right_drawer.xml
+++ b/app/src/main/res/layout/right_drawer.xml
@@ -11,13 +11,13 @@
             android:gravity="center"
             android:text="User List"
             android:textSize="26sp"
-            android:textColor="#ffff00"
+            android:textColor="#87CEEB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/right_user"
-            android:background="@color/black"
+            android:background="#87CEEB"
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="0dp"/>
