--- a/app/src/main/res/layout/fragment_pedometer.xml
+++ b/app/src/main/res/layout/fragment_pedometer.xml
@@ -5,20 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-<ProgressBar
-    android:id="@+id/pro"
+<androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/daily_list"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:layout_height="match_parent"
+    android:id="@+id/pedlist"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
