--- a/app/src/main/res/layout/scan_view.xml
+++ b/app/src/main/res/layout/scan_view.xml
@@ -11,7 +11,7 @@
     android:orientation="vertical"
     >
         <TextView
-            android:background="#f0f8ff"
+            android:background="#ff000000"
             android:text="@string/app_name"
             android:gravity="center"
             android:textColor="#87CEEB"
