--- a/app/src/main/res/layout/ble_scan_view.xml
+++ b/app/src/main/res/layout/ble_scan_view.xml
@@ -7,22 +7,21 @@
     android:background="#87CEEB"
     android:layout_height="190dp">
 
-<androidx.cardview.widget.CardView
-    android:layout_marginTop="10dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:cardCornerRadius="30dp"
-    >
-  <TextView
-      android:id="@+id/ble_name"
-      android:textSize="22sp"
-      android:textColor="@color/black"
-      android:gravity="center"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
+    <androidx.cardview.widget.CardView
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="30dp">
 
-</androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/ble_name"
+            android:textSize="22sp"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
+    </androidx.cardview.widget.CardView>
 
 
 </LinearLayout>
