--- a/app/src/main/res/layout/item_user_view.xml
+++ b/app/src/main/res/layout/item_user_view.xml
@@ -1,38 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-   android:orientation="vertical"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:background="#ff0000a0"
     android:id="@+id/gaga"
     android:layout_height="90dp">
-<LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:gravity="center"
-    android:layout_height="88dp">
 
-<ImageView
-    android:id="@+id/head"
-    android:layout_marginStart="20dp"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
-    android:src="@drawable/ico1"
-    />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="88dp">
 
-  <TextView
-      android:textSize="20sp"
-      android:layout_marginStart="10dp"
-      android:textColor="#ffffff"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:gravity="center_vertical|start"
-      android:id="@+id/userName"/>
+        <ImageView
+            android:id="@+id/head"
+            android:layout_marginStart="20dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ico1" />
 
-</LinearLayout>
-<View
-    android:layout_width="match_parent"
-    android:layout_height="2dp"
-    android:background="#ff000000"/>
+        <TextView
+            android:textSize="20sp"
+            android:layout_marginStart="10dp"
+            android:textColor="#ffffff"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical|start"
+            android:id="@+id/userName" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#ff000000" />
 
 </LinearLayout>
