--- a/app/src/main/res/layout/fragment_dailycheck.xml
+++ b/app/src/main/res/layout/fragment_dailycheck.xml
@@ -9,7 +9,12 @@
     <ProgressBar
         android:id="@+id/pro"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="50dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/daily_list"
