--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/nav_3"
-        android:name="com.viatom.checkme.leftnavi.pulseOximeter.PulseOximiterFragment"
+        android:name="com.viatom.checkme.leftnavi.oximeter.OximiterFragment"
         android:label="Pulse Oximeter"
         tools:layout="@layout/fragment_pulseoximeter" />
     <fragment
