--- a/app/src/main/res/layout/item_tmp.xml
+++ b/app/src/main/res/layout/item_tmp.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="#ff0000a0"
+    android:background="#ffa0b000"
     android:id="@+id/gaga"
     android:layout_height="90dp">
 
@@ -17,22 +17,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:gravity="center"
+        android:gravity="start|center_vertical"
         android:layout_weight="1">
         <ImageView
-            android:padding="5dp"
+            android:layout_marginStart="50dp"
+            android:padding="10dp"
             android:id="@+id/face"
             android:layout_width="45dp"
             android:layout_height="45dp"/>
         <TextView
             android:textColor="@color/white"
-            android:id="@+id/way"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:textColor="@color/white"
             android:id="@+id/time"
-            android:layout_marginStart="60dp"
+            android:textSize="14sp"
+            android:layout_marginStart="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
