--- a/app/src/main/res/layout/scan_view.xml
+++ b/app/src/main/res/layout/scan_view.xml
@@ -58,6 +58,7 @@
         android:layout_height="wrap_content">
 
         <Button
+            android:onClick="offline"
             android:textAllCaps="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
