--- a/app/src/main/res/layout/item_tmp.xml
+++ b/app/src/main/res/layout/item_tmp.xml
@@ -1,35 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:background="#ffa0b000"
     android:id="@+id/gaga"
     android:layout_height="90dp">
-
-    <TextView
-        android:gravity="center"
-        android:textSize="22sp"
-        android:textColor="@color/white"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_weight="1"
-        android:id="@+id/tmp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:gravity="start|center_vertical"
-        android:layout_weight="1">
+        android:layout_height="0dp">
+        <TextView
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:gravity="center"
+            android:textSize="22sp"
+            android:textColor="@color/white"
+            android:id="@+id/tmp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <ImageView
-            android:layout_marginStart="50dp"
-            android:padding="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tmp"
+            android:layout_marginEnd="10dp"
+            android:padding="7dp"
             android:id="@+id/face"
             android:layout_width="45dp"
             android:layout_height="45dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:layout_weight="1">
+
         <TextView
             android:textColor="@color/white"
             android:id="@+id/time"
             android:textSize="14sp"
-            android:layout_marginStart="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
