--- a/app/src/main/res/layout/fragment_dailycheck.xml
+++ b/app/src/main/res/layout/fragment_dailycheck.xml
@@ -21,4 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
       />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/ecg_list"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
