--- a/app/src/main/res/layout/fragment_dailycheck.xml
+++ b/app/src/main/res/layout/fragment_dailycheck.xml
@@ -21,10 +21,105 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
       />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ecg_list"
-        android:visibility="gone"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:id="@+id/wavelayout"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:background="#fff0f0f0"
+            android:layout_height="50dp">
+            <ImageView
+                android:layout_marginStart="10dp"
+                android:padding="10dp"
+                android:id="@+id/back_button"
+                android:src="@drawable/ic_baseline_arrow_back_ios_24"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:layout_marginStart="30dp"
+                android:text="ECG"
+                android:textColor="#ffffffff"
+                android:id="@+id/ecg_button"
+                android:padding="7dp"
+                android:layout_width="70dp"
+                android:textSize="15sp"
+                android:gravity="center"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:text="O2"
+                android:gravity="center"
+                android:textColor="#222222"
+                android:textSize="15sp"
+                android:id="@+id/o2button"
+                android:layout_marginStart="30dp"
+            android:padding="7dp"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="50dp">
+            <TextView
+                android:id="@+id/p1"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:text="wfwef"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:id="@+id/p2"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:text="wfwef"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:id="@+id/p3"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:text="wfwef"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="50dp">
+            <TextView
+                android:id="@+id/p4"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:text="wfwef"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:id="@+id/p5"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:text="wfwef"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:id="@+id/p6"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:text="wfwef"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/ecg_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
