--- a/app/src/main/res/drawable/button_circle_shape.xml
+++ b/app/src/main/res/drawable/button_circle_shape.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- 填充的颜色 -->
     <solid android:color="#255BB5" />
     <!-- android:radius 弧形的半径 -->
     <!-- 设置按钮的四个角为弧形 -->
-    <corners
-        android:radius="5dp" />
+    <corners android:radius="5dp" />
 </shape>
 
