--- a/app/src/main/res/layout/item_ble.xml
+++ b/app/src/main/res/layout/item_ble.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="15dp"
     android:layout_width="match_parent"
+    android:layout_height="190dp"
     android:background="#87CEEB"
-    android:layout_height="190dp">
+    android:orientation="vertical"
+    android:padding="15dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
         app:cardBackgroundColor="#ffa0b000"
         app:cardCornerRadius="30dp">
 
         <TextView
             android:id="@+id/ble_name"
-            android:textSize="22sp"
-            android:textColor="@color/white"
-            android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="22sp" />
 
     </androidx.cardview.widget.CardView>
 
