--- a/app/src/main/res/layout/item_daily.xml
+++ b/app/src/main/res/layout/item_daily.xml
@@ -1,155 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:background="#ffa0b000"
     android:id="@+id/gaga"
-    android:layout_height="90dp">
+    android:layout_width="match_parent"
+    android:layout_height="90dp"
+    android:background="#ffa0b000"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
+        android:layout_height="88dp"
         android:gravity="start|bottom"
-        android:layout_height="88dp">
+        android:orientation="horizontal">
+
         <LinearLayout
             android:layout_width="40dp"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
             <TextView
-                android:gravity="center"
-                android:text="HR"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"/>
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:text="HR" />
+
             <TextView
                 android:id="@+id/ecg"
-                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"/>
+                android:layout_height="45dp"
+                android:gravity="center" />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="40dp"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
             <ImageView
-                android:padding="5dp"
-                android:src="@drawable/ecg_l"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"/>
-            <ImageView
+                android:layout_height="45dp"
                 android:padding="5dp"
+                android:src="@drawable/ecg_l" />
+
+            <ImageView
                 android:id="@+id/f1"
-                android:src="@drawable/smile"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"/>
+                android:layout_height="45dp"
+                android:padding="5dp"
+                android:src="@drawable/smile" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="40dp"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
             <TextView
-                android:gravity="center"
-                android:text="O2"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"/>
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:text="O2" />
+
             <TextView
                 android:id="@+id/o2"
-                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"/>
+                android:layout_height="45dp"
+                android:gravity="center" />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="40dp"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
             <TextView
-                android:gravity="center"
-                android:text="PI"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"/>
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:text="PI" />
+
             <TextView
                 android:id="@+id/pi"
-                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"/>
+                android:layout_height="45dp"
+                android:gravity="center" />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="40dp"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
             <ImageView
-                android:padding="5dp"
-                android:src="@drawable/spo2_l"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"/>
-            <ImageView
+                android:layout_height="45dp"
                 android:padding="5dp"
+                android:src="@drawable/spo2_l" />
+
+            <ImageView
                 android:id="@+id/f2"
-                android:src="@drawable/smile"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"/>
+                android:layout_height="45dp"
+                android:padding="5dp"
+                android:src="@drawable/smile" />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="40dp"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
             <TextView
-                android:gravity="center"
-                android:text="BPI"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"/>
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:text="BPI" />
+
             <TextView
                 android:id="@+id/bpi"
-                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"/>
+                android:layout_height="45dp"
+                android:gravity="center" />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="40dp"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
             <ImageView
-                android:padding="5dp"
-                android:src="@drawable/bp_l"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"/>
-            <ImageView
+                android:layout_height="45dp"
                 android:padding="5dp"
+                android:src="@drawable/bp_l" />
+
+            <ImageView
                 android:id="@+id/f3"
-                android:src="@drawable/smile"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"/>
+                android:layout_height="45dp"
+                android:padding="5dp"
+                android:src="@drawable/smile" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:paddingEnd="10dp"
+            android:layout_height="match_parent"
             android:gravity="end"
-            android:layout_height="match_parent">
+            android:orientation="vertical"
+            android:paddingEnd="10dp">
 
             <ImageView
                 android:id="@+id/download"
-                android:src="@drawable/ic_baseline_arrow_circle_down_24"
-
                 android:layout_width="30dp"
-                android:layout_height="40dp"/>
+
+                android:layout_height="40dp"
+                android:src="@drawable/ic_baseline_arrow_circle_down_24" />
+
             <TextView
-                android:textSize="14sp"
-                android:textColor="#ffffff"
-
+                android:id="@+id/userName"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/userName" />
-        </LinearLayout>
 
+                android:layout_height="wrap_content"
+                android:textColor="#ffffff"
+                android:textSize="14sp" />
+        </LinearLayout>
 
 
     </LinearLayout>
