--- a/app/src/main/res/layout/item_oxy.xml
+++ b/app/src/main/res/layout/item_oxy.xml
@@ -1,105 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:background="#ffa0b000"
     android:id="@+id/gaga"
-    android:layout_height="90dp">
+    android:layout_width="match_parent"
+    android:layout_height="90dp"
+    android:background="#ffa0b000"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
+        android:layout_height="88dp"
         android:gravity="center"
-        android:layout_height="88dp">
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_height="0dp">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center">
+
             <ImageView
                 android:id="@+id/head"
-                android:padding="10dp"
                 android:layout_width="45dp"
                 android:layout_height="match_parent"
-                />
-            <TextView
-                android:text="O2:"
-                android:textSize="20sp"
-                android:textColor="#ffffff"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:id="@+id/o2"
-                android:padding="5dp"
-                android:textSize="20sp"
-                android:textColor="#ffffff"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:padding="10dp" />
 
             <TextView
-                android:text="PR:"
-                android:layout_marginStart="30dp"
-                android:textSize="20sp"
-                android:textColor="#ffffff"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="O2:"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/o2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:text="PR:"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/pr"
-                android:padding="5dp"
-                android:textSize="20sp"
-                android:textColor="#ffffff"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
 
 
             <TextView
-                android:text="PI:"
-                android:layout_marginStart="30dp"
-                android:textSize="20sp"
-                android:textColor="#ffffff"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:text="PI:"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
+
             <TextView
                 android:id="@+id/pi"
-                android:padding="5dp"
-                android:textSize="20sp"
-                android:textColor="#ffffff"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
 
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_height="0dp">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center">
 
             <TextView
-                android:textSize="20sp"
-                android:textColor="#ffffff"
+                android:id="@+id/way"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center"
-                android:id="@+id/way" />
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
 
             <TextView
-                android:textSize="14sp"
-                android:padding="5dp"
-                android:layout_marginEnd="10dp"
-                android:textColor="#ffffff"
-                android:layout_weight="1"
+                android:id="@+id/userName"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
                 android:gravity="right|bottom"
-                android:id="@+id/userName" />
+                android:padding="5dp"
+                android:textColor="#ffffff"
+                android:textSize="14sp" />
 
         </LinearLayout>
-
 
 
     </LinearLayout>
