--- a/app/src/main/res/layout/item_ped.xml
+++ b/app/src/main/res/layout/item_ped.xml
@@ -1,123 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:background="#ffa0b000"
     android:id="@+id/gaga"
-    android:layout_height="90dp">
+    android:layout_width="match_parent"
+    android:layout_height="90dp"
+    android:background="#ffa0b000"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:gravity="center_horizontal|bottom"
+        android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_height="0dp">
+        android:gravity="center_horizontal|bottom"
+        android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/step"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:padding="5dp"
-           android:id="@+id/step"
-            android:textSize="14sp"
             android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:text=" steps"
-            android:textSize="14sp"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textSize="14sp" />
 
         <TextView
-            android:layout_marginStart="30dp"
-            android:id="@+id/dis"
-            android:textSize="14sp"
-            android:textColor="@color/white"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text=" steps"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
         <TextView
+            android:id="@+id/dis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:padding="5dp"
             android:text=" km"
-            android:textSize="14sp"
             android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textSize="14sp" />
 
         <TextView
-            android:layout_marginStart="30dp"
             android:id="@+id/speed"
-            android:textSize="14sp"
-            android:textColor="@color/white"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:padding="5dp"
             android:text=" km/h"
-            android:textSize="14sp"
             android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textSize="14sp" />
 
 
     </LinearLayout>
+
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:gravity="center_horizontal|top"
+        android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_height="0dp">
+        android:gravity="center_horizontal|top"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/cal"
-            android:textSize="14sp"
-            android:textColor="@color/white"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:padding="5dp"
-            android:text="kcal"
-            android:textSize="14sp"
+            android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_marginStart="30dp"
-            android:text="Fat(g):"
-            android:textSize="14sp"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:padding="5dp"
-            android:id="@+id/fat"
-            android:textSize="14sp"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textSize="14sp" />
 
         <TextView
-            android:layout_marginStart="30dp"
-            android:id="@+id/time"
-            android:textSize="14sp"
-            android:textColor="@color/white"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="kcal"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:text="Fat(g):"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/fat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:padding="5dp"
             android:text=" min"
-            android:textSize="14sp"
             android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textSize="14sp" />
 
     </LinearLayout>
 
     <TextView
-        android:textColor="@color/white"
         android:id="@+id/recordTime"
-        android:textSize="12sp"
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:gravity="center_horizontal|top"/>
+        android:gravity="center_horizontal|top"
+        android:textColor="@color/white"
+        android:textSize="12sp" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
