--- a/app/src/main/res/layout/item_slm.xml
+++ b/app/src/main/res/layout/item_slm.xml
@@ -1,66 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:background="#ffa0b000"
     android:id="@+id/gaga"
-    android:layout_height="90dp">
+    android:layout_width="match_parent"
+    android:layout_height="90dp"
+    android:background="#ffa0b000"
+    android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_weight="2"
-        android:layout_height="0dp">
+        android:layout_height="0dp"
+        android:layout_weight="2">
+
         <ImageView
+            android:id="@+id/face"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:padding="7dp"
-            android:id="@+id/face"
-            android:layout_width="45dp"
-            android:layout_height="45dp"/>
-        <TextView
-            android:layout_alignParentTop="true"
-            android:padding="3dp"
-            android:layout_toEndOf="@+id/face"
-            android:gravity="center"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:id="@+id/min"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_marginStart="50dp"
-            android:layout_alignParentTop="true"
-            android:padding="3dp"
-            android:layout_toEndOf="@+id/min"
-            android:gravity="center"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:id="@+id/mean"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@+id/face"
-            android:textSize="14sp"
-            android:padding="3dp"
-            android:textColor="@color/white"
-            android:id="@+id/lowTime"
-            />
+            android:padding="7dp" />
 
         <TextView
-            android:layout_marginStart="30dp"
+            android:id="@+id/min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/face"
+            android:gravity="center"
+            android:padding="3dp"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/mean"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="50dp"
+            android:layout_toEndOf="@+id/min"
+            android:gravity="center"
+            android:padding="3dp"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/lowTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@+id/lowTime"
-            android:textSize="14sp"
+            android:layout_toEndOf="@+id/face"
             android:padding="3dp"
             android:textColor="@color/white"
+            android:textSize="14sp" />
+
+        <TextView
             android:id="@+id/lowCount"
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="30dp"
+            android:layout_toEndOf="@+id/lowTime"
+            android:padding="3dp"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
 
     </RelativeLayout>
 
@@ -68,26 +70,28 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:gravity="center"
-        android:layout_weight="1">
-        <TextView
-            android:layout_marginStart="10dp"
-            android:layout_alignParentStart="true"
-            android:layout_width="wrap_content"
-            android:id="@+id/lastTime"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:layout_height="wrap_content"/>
+        android:layout_weight="1"
+        android:gravity="center">
 
         <TextView
-            android:layout_marginEnd="10dp"
-            android:layout_alignParentEnd="true"
-            android:textColor="@color/white"
-            android:id="@+id/time"
-            android:textSize="14sp"
+            android:id="@+id/lastTime"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="10dp"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
     </RelativeLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
