--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:background="#ff0000a0"
     android:id="@+id/gaga"
-    android:layout_height="90dp">
+    android:layout_width="match_parent"
+    android:layout_height="90dp"
+    android:background="#ff0000a0"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
+        android:layout_height="88dp"
         android:gravity="center"
-        android:layout_height="88dp">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/head"
-            android:layout_marginStart="20dp"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginStart="20dp"
             android:src="@drawable/ico1" />
 
         <TextView
-            android:textSize="20sp"
-            android:layout_marginStart="10dp"
-            android:textColor="#ffffff"
+            android:id="@+id/userName"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
             android:gravity="center_vertical|start"
-            android:id="@+id/userName" />
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
